Fine tune Auto Groups

--- a/config/services.yml
+++ b/config/services.yml
@@ -30,6 +30,7 @@ services:
             - '%core.root_path%'
             - '%core.php_ext%'
             - '@david63.privacypolicy.core.privacypolicy_lang'
+            - '@david63.privacypolicy.core.privacypolicy'			
 
     david63.privacypolicy.acp.manage.controller:
         class: david63\privacypolicy\controller\acp_manage_controller
@@ -41,6 +42,7 @@ services:
             - '@language'
             - '@log'
             - '@dbal.conn'
+            - '@david63.privacypolicy.core.privacypolicy'
 
     david63.privacypolicy.acp.edit.controller:
         class: david63\privacypolicy\controller\acp_edit_controller
